--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -130,7 +130,7 @@ import Nation from '../components/Nation.astro';
 			</Card>
 		</div>
 		<div class="flex justify-center items-center">
-			<a href="games" class="px-2 py-1 rounded-full border bg-blue-900 text-blue-100">
+			<a href="games" class="px-3 py-2 text-xl font-medium hover:bg-blue-800 rounded-full border bg-blue-900 text-blue-100">
 				<span>Ver más</span>
 			</a>
 		</div>
