--- a/src/components/Card.astro
+++ b/src/components/Card.astro
@@ -8,7 +8,7 @@ const {title,cover } = Astro.props;
 const tiempo = (Math.random() * 0.2+0.3).toFixed(1) + 's';
 ---
 
-<div class="animacion relative block max-w-80 rounded-lg overflow-hidden border-2 border-blue-900">
+<div class="carta relative block max-w-80 rounded-lg overflow-hidden border-2 border-blue-900">
 	<figure class="w-full">
 		<img src={cover} alt="entrega" class="w-full">
 	</figure>
@@ -39,4 +39,23 @@ const tiempo = (Math.random() * 0.2+0.3).toFixed(1) + 's';
 			transform: scale(1);
 		}
 	}
+	.carta{
+        animation:show linear both ;
+        
+        animation-timeline: view();
+        /* animation-name: show; */
+        animation-range: entry 0% cover 10%;
+        /* animation-fill-mode: both; */
+    }
+    @keyframes show {
+        from{
+            opacity: 0;
+            scale: 10%;
+        }
+        to {
+            opacity: 1;
+            scale: 100%;
+        }
+	}
+
 </style>
