animaciones en home

--- a/src/components/LinksContainer.astro
+++ b/src/components/LinksContainer.astro
@@ -9,9 +9,16 @@ const url=Astro.url.pathname;
     </button>
     <ul class="sm:flex sm:static items-center gap-1 max-sm:px-2 max-sm:py-1 bg-purple-800" :class="expand?'absolute left-0 right-0 z-50':'hidden'">
         <NavElement href="/" title="Inicio"/>
-        <NavElement href="#Saga" title="Saga"/>
-        <NavElement href="#Personajes" title="Personajes"/>
+        {url==='/'&& (
+            <NavElement href="#Saga" title="Saga"/>
+            <NavElement href="#Personajes" title="Personajes"/>
+        )}
         <NavElement href="/world/" title="Naciones"/>
-        <NavElement href="#Juegos" title="Juegos"/>
+        {
+            url==='/'
+            ?(<NavElement href="#Juegos" title="Juegos"/>)
+            :(<NavElement href="/games" title="Juegos"/>)
+        }
+        
     </ul>
 </div>
